# mismo

./: '  Cargo.toml  README.md
.github/workflows/: rust_test.yml
logs/main/: log4rs.yaml
logs/test/: log4rs.yaml
src/: lib.rs  main.rs  repl.rs
src/codegen/: mod.rs
src/codegen/expressions/: binary.rs  calls.rs  expr_list.rs  identifer.rs  literals.rs  mod.rs  unary.rs
src/codegen/mystd/: mod.rs
src/codegen/statements/: blocks.rs  exprs.rs  fors.rs  func_decls.rs  ifs.rs  mod.rs  returns.rs  var_decls.rs  whiles.rs
src/compiler/: mod.rs
src/parser/: mod.rs
src/parser/expressions/: binary.rs  calls.rs  expr_list.rs  identifer.rs  literals.rs  mod.rs  unary.rs
src/parser/statements/: blocks.rs  exprs.rs  fors.rs  func_decls.rs  ifs.rs  mod.rs  returns.rs  var_decls.rs  whiles.rs
src/tokenizer/: mod.rs  token.rs
test_assets/: test_file.mi
tests/: integration_test.rs  temp.out.txt
tests/cases/: 2.mi  fibonacci.mi  for_loop.mi  functions.mi  global_variables.mi  if_statements.mi  indirect_recursion.mi  numerical_expressions.mi  numerical_expressions.out.txt  while_loop.mi
